@@ -270,12 +270,21 @@ class Post(object):
                                  'Valid values are "published", "private" and "draft".').format(self.source_path, status))
 
             if self.config['WARN_ABOUT_TAG_METADATA']:
+                show_warning = False
                 if 'draft' in [_.lower() for _ in self._tags[lang]]:
                     LOGGER.warn('The post "{0}" uses the "draft" tag.'.format(self.source_path))
+                    show_warning = True
                 if 'private' in self._tags[lang]:
                     LOGGER.warn('The post "{0}" uses the "private" tag.'.format(self.source_path))
+                    show_warning = True
                 if 'mathjax' in self._tags[lang]:
                     LOGGER.warn('The post "{0}" uses the "mathjax" tag.'.format(self.source_path))
+                    show_warning = True
+                if show_warning:
+                    LOGGER.warn('It is suggested that you convert special tags to metadata and set ' +
+                                'USE_TAG_METADATA to False. You can use the XXX command plugin for ' +
+                                'conversion. Change the WARN_ABOUT_TAG_METADATA configuration to ' +
+                                'disable this warning.')
             if self.config['USE_TAG_METADATA']:
                 if 'draft' in [_.lower() for _ in self._tags[lang]]:
                     is_draft = True
